Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-doc-app
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: web-doc-app
  type: ClusterIP
...
